deploy-volumes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    app: app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
       app: app-v1
  template:
    metadata:
       labels:
          app: app-v1
    spec:
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: test-pvc
      containers:
      - name: sample-ctr
        image: saikiranreddy1808/deploy:v1
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/usr/share/nginx/html"
            name: pv-storage
