pod.yml
apiVersion: v1
kind: apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
  labels:
    zone: prod
    version: v1
spec:
    containers:
    - name: sample-ctr
      image: saikiranreddy1808/deploy:v1
      ports:
        - containerport: 80
