statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deploy2
  labels:
    app: mysql
spec:
  replicas: 2
  selector:
    matchLabels:
         app: mysql
  serviceName: "mysql"
  template:
   metadata:
    labels:
       app: mysql
   spec:
    terminationGracePeriodSeconds: 10
    imagePullSecrets:
    - name: my-key
    containers:
    - name: db-ctr
      image: saikiranreddy1808/java-mvn-privaterepos:sql
      imagePullPolicy: Always
      ports:
      - containerPort: 3306
      volumeMounts:
      - name: mysql-store
        mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - meatadata:
        name: mysql-store
      spec: 
       accessModes: 
       - ReadWriteOnce 
       storageClassname: "manual"
       resources:
        requests: 
          storage: 5Gi
---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
 ports:
 - port: 3306
 clusterIP: None
 selector:
  app: mysql
