svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: svc2
  labels:
      app: app-v2
spec:
  selector:
    app: app-v2
  ports:
  - port: 80
    targetPort: 30002
    protocol: TCP
  type: ClusterIP
