web-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy1
  labels:
    app: app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
         app: app-v1
  template:
   metadata:
    labels:
       app: app-v1
   spec:
    imagePullSecrets:
    - name: my-key
    containers:
    - name: php-ctr
      image: saikiranreddy1808/java-mvn-privaterepos:php
      imagePullPolicy: Always
      ports:
      - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: svc1
  labels:
    app: app-v1
spec:
 ports:
 - port: 80
   nodePort: 32001
   protocol: TCP
 selector:
  app: app-v1
 type: NodePort
